tests/errors/sem.type-mismatch.arr-type.or
main :: () -> void {
    F :: 5;
    [10]F;
};
